Work around bad values in konversationrc, and attempt to prevent it from happening again by making the application object own the common queue rates instead of using a global static.

BUG: 204970

svn path=/trunk/extragear/network/konversation/; revision=1026169